syntax = "proto3";

package common.v1;

message StandardResponse {
    string status = 1;
    uint64 code = 2;
    string error_message = 3;
}

message ErrorResponse {
    string message = 1;
    StandardResponse http_status = 2;
}